# red-rover-rust

./: .gitignore  README.MD
cli-pgsql/: Cargo.toml
cli-pgsql/src/: main.rs
cli-rabbitmq/: Cargo.toml
cli-redis/: Cargo.toml
cli-redis/src/: main.rs
gui-windows/: Cargo.toml
gui-windows/src/: main.rs
hello_world/: Cargo.toml
rust-client-rest/: Cargo.toml
rust-client-rest/src/: main.rs
rust-serve-rest/: Cargo.toml
rust-serve-rest/src/: event.rs  main.rs
vs-rest-client-test-rest/: post.rest
